--- a/zigbee2mqtt-switches/config.json
+++ b/zigbee2mqtt-switches/config.json
@@ -1,10 +1,10 @@
 {
-  "name": "Zigbee2mqtt",
+  "name": "Zigbee2mqtt Switches",
   "version": "1.17.1-4",
-  "slug": "zigbee2mqtt",
+  "slug": "zigbee2mqtt_switches",
   "description": "Zigbee2mqtt add-on",
   "uart": true,
-  "url": "https://github.com/zigbee2mqtt/hassio-zigbee2mqtt/tree/master/zigbee2mqtt",
+  "url": "https://github.com/andreypolyak/hassio-zigbee2mqtt-multi/tree/master/zigbee2mqtt",
   "startup": "application",
   "services": [
     "mqtt:need"
